actix-web-codegen/tests/trybuild/scope-trailing-slash.rs
use actix_web_codegen::scope;

#[scope("/api/")]
mod api {}

fn main() {}
